Return AbsPath from ProjectFilesystem.resolve(String)
Reviewed By: irenewchen

shipit-source-id: d5d444919cc4efb6577bd039d9004b1ecb231edf